@@ -25,12 +25,8 @@ AbstractFileCreationWizardPage.error.EnterSourceFolderName=Source folder name is
 AbstractFileCreationWizardPage.error.NotAFolder=''{0}'' is not a project or folder.
 AbstractFileCreationWizardPage.error.NotASourceFolder=Folder ''{0}'' is not a source folder.
 AbstractFileCreationWizardPage.error.ProjectClosed=Project ''{0}'' must be accessible.
-NewHeaderFileCreationWizardPagewarning.NotACProject=Folder is not a C/C++ project.
+AbstractFileCreationWizardPagewarning.NotACProject=Folder is not a C/C++ project.
 AbstractFileCreationWizardPage.warning.NotInACProject=Folder is not in a C/C++ project.
-
-AbstractFileCreationWizardPage.error.NotAFile=''{0}'' is not a file.
-AbstractFileCreationWizardPage.error.FolderDoesNotExist=Folder ''{0}'' does not exist.
-AbstractFileCreationWizardPage.error.SourceFolderRequired=The source folder is required.
 
 # ------- NewHeaderFileCreationWizard ------- 
 NewHeaderFileCreationWizard.title= New Header File
@@ -47,6 +43,7 @@ NewHeaderFileCreationWizardPage.error.FileNotInSourceFolder=File must be inside 
 NewHeaderFileCreationWizardPage.error.FileExists=File already exists.
 NewHeaderFileCreationWizardPage.error.MatchingFolderExists=A folder with the same name already exists.
 NewHeaderFileCreationWizardPage.error.MatchingResourceExists=A resource with the same name already exists.
+NewHeaderFileCreationWizardPage.error.FolderDoesNotExist=Folder ''{0}'' does not exist.
 NewHeaderFileCreationWizardPage.warning.FileNameDiscouraged=File name is discouraged. {0}.
 NewHeaderFileCreationWizardPage.error.InvalidFileName=File name is not valid. {0}.
 
@@ -59,6 +56,7 @@ NewSourceFileCreationWizardPage.error.FileNotInSourceFolder=File must be inside 
 NewSourceFileCreationWizardPage.error.FileExists=File already exists.
 NewSourceFileCreationWizardPage.error.MatchingFolderExists=A folder with the same name already exists.
 NewSourceFileCreationWizardPage.error.MatchingResourceExists=A resource with the same name already exists.
+NewSourceFileCreationWizardPage.error.FolderDoesNotExist=Folder ''{0}'' does not exist.
 NewSourceFileCreationWizardPage.warning.FileNameDiscouraged=File name is discouraged. {0}.
 NewSourceFileCreationWizardPage.error.InvalidFileName=File name is not valid. {0}.
 
