@@ -1,5 +1,11 @@
 2004-09-22 Chris Wiebe
 
+	add lock for safety
+	* src/org/eclipse/cdt/internal/ui/wizards/AbstractWizardDropDownAction.java	
+	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewFileWizardMessages.properties
+
+2004-09-22 Chris Wiebe
+
 	new file wizards
 	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
 	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
